AC_INIT(src)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(erdos2, 0.0.1)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)
GNOME_INIT
GNOME_COMPILE_WARNINGS

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_ARG_PROGRAM
AM_PROG_LIBTOOL
AM_PROG_LEX
AC_PROG_YACC

ALL_LINGUAS=""
AM_GNOME_GETTEXT

GNOME_XML_CHECK
XML_CFLAGS=`gnome-config --cflags xml`
AC_SUBST(XML_CFLAGS)

AM_PATH_LIBGLADE
AM_PATH_GDK_PIXBUF

CFLAGS="-O2 -g -Wall $CFLAGS"

AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
intl/Makefile])

